metadata/force-app/main/default/objects/agf__ADM_Board_User_Preferences__c/fields/agf__Board_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Board_Type__c</fullName>
    <label>Board Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kanban</fullName>
            </value>
            <value>
                <fullName>Sprint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>