metadata/force-app/main/default/objects/agf__ADM_Board_User_Preferences__c/fields/agf__Filters__c.field-meta.xml
<CustomField>
    <fullName>agf__Filters__c</fullName>
    <label>Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>