metadata/force-app/main/default/objects/agf__ADM_Board_User_Preferences__c/fields/agf__User__c.field-meta.xml
<CustomField>
    <fullName>agf__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Board_User_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>