metadata/force-app/main/default/objects/agf__ADM_Board_User_Preferences__c/fields/agf__User_Filter__c.field-meta.xml
<CustomField>
    <fullName>agf__User_Filter__c</fullName>
    <label>User Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>